# ProjectGhost

./: Cargo.toml  README.md  limine.cfg
scripts/: build.sh  clean.sh  run-qemu.sh
src/drivers/: disk.rs  display.rs  net.rs
src/kernel/: idt.rs  main.rs  mem.rs  memory.rs  paging.rs  scheduler.rs  syscalls.rs
src/userland/: init.rs  mod.rs  shell.rs  sys_bindings.rs
